@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.6.19-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-06-19 08:50:57, took 00:10:46, with 60 workers, on 546 cases, 0 failed, 0 traces, 0 retries
+-;-;-;2024-06-19 09:53:48, took 00:09:34, with 60 workers, on 546 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
